fix: alignment arrow in link

--- a/src/components/UI/arrowUp/ArrowUp.module.css
+++ b/src/components/UI/arrowUp/ArrowUp.module.css
@@ -9,6 +9,7 @@
 
     position: absolute;
     bottom: 0;
+    z-index: -1;
     right: -300px;
 }
 
