--- a/src/components/UI/project/Project.module.css
+++ b/src/components/UI/project/Project.module.css
@@ -91,10 +91,10 @@
 }
 
 .link svg {
-    margin-top: 3px;
     width: 14px;
     transform: rotate(45deg);
     position: relative;
+    vertical-align: middle;
 }
 
 .company {
