--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -98,18 +98,17 @@
 }
 
 .socials a {
-    display: flex;
-    align-items: center;
-    gap: 4px;
+    display: inline;
+    vertical-align: middle;
 }
 
 .socials a svg {
-    margin-top: 3px;
     width: 9px;
     height: 9px;
+    margin-left: 4px;
     transform: rotate(45deg);
-    position: relative;
     color: #9B9B9B;
+    vertical-align: middle;
 }
 
 .socials a:hover path {
